feat: add Directionally Aware Button component with HTML, CSS, and project metadata

--- a/projects.json
+++ b/projects.json
@@ -534,5 +534,13 @@
     "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "067.Button Keyboard Style"
+  },
+  {
+    "id": "068",
+    "title": "Directionally Aware Button",
+    "createdDate": "2025-04-09",
+    "modifiedDate": "2025-04-09",
+    "tech": "CSS, HTML",
+    "path": "068.Directionally Aware Button"
   }
 ]
