--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "types": "module",
   "description": "Personal repository for learning and practicing web components techniques through daily coding exercises.",
-  "main": "newProject.mjs",
   "scripts": {
     "start": "node ./tasks/newProject.mjs",
     "readme": "node ./tasks/updateREADME.mjs"
@@ -13,9 +12,8 @@
     "url": "git+https://github.com/NGH14/daily-component.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "vuhuunghia2001@gmail.com",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/NGH14/daily-component/issues"
   },
