feat: Day #69 for simple check box icon input

--- a/projects.json
+++ b/projects.json
@@ -3,7 +3,7 @@
     "id": "001",
     "title": "Simple Validate Form with Vanilla JS",
     "createdDate": "2025-01-04",
-    "modifiedDate": "2025-01-10",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JavaScript",
     "path": "001.Simple Validate Form with Vanilla JS"
   },
@@ -11,7 +11,7 @@
     "id": "002",
     "title": "Simple Skeleton with Vanilla JS",
     "createdDate": "2025-01-04",
-    "modifiedDate": "2025-01-13",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JavaScript",
     "path": "002.Simple Skeleton with Vanilla JS"
   },
@@ -19,7 +19,7 @@
     "id": "003",
     "title": "Hover The Odds Text",
     "createdDate": "2025-01-04",
-    "modifiedDate": "2025-01-04",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "003.Hover The Odds Text"
   },
@@ -27,7 +27,7 @@
     "id": "004",
     "title": "Google Input Style",
     "createdDate": "2025-01-04",
-    "modifiedDate": "2025-01-04",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "004.Google Input Style"
   },
@@ -35,7 +35,7 @@
     "id": "005",
     "title": "Newsletter",
     "createdDate": "2025-01-05",
-    "modifiedDate": "2025-03-10",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JavaScript",
     "path": "005.Newsletter"
   },
@@ -43,7 +43,7 @@
     "id": "006",
     "title": "Scroll Long Image on Hover",
     "createdDate": "2025-01-06",
-    "modifiedDate": "2025-01-06",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "006.Scroll Long Image on Hover"
   },
@@ -51,7 +51,7 @@
     "id": "007",
     "title": "Simple Quote",
     "createdDate": "2025-01-07",
-    "modifiedDate": "2025-01-07",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, WEBP",
     "path": "007.Simple Quote"
   },
@@ -59,7 +59,7 @@
     "id": "008",
     "title": "Simple Grids",
     "createdDate": "2025-01-08",
-    "modifiedDate": "2025-01-09",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JSON, JavaScript",
     "path": "008.Simple Grids"
   },
@@ -67,7 +67,7 @@
     "id": "009",
     "title": "Glass Effect",
     "createdDate": "2025-01-09",
-    "modifiedDate": "2025-01-10",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "009.Glass Effect"
   },
@@ -75,7 +75,7 @@
     "id": "010",
     "title": "Simple Textarea",
     "createdDate": "2025-01-09",
-    "modifiedDate": "2025-01-10",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JavaScript",
     "path": "010.Simple Textarea "
   },
@@ -83,7 +83,7 @@
     "id": "011",
     "title": "Underneath Footer",
     "createdDate": "2025-01-11",
-    "modifiedDate": "2025-03-04",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "011.Underneath Footer"
   },
@@ -91,7 +91,7 @@
     "id": "012",
     "title": "Simple Grid",
     "createdDate": "2025-01-12",
-    "modifiedDate": "2025-01-12",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "012.Simple Grid "
   },
@@ -99,7 +99,7 @@
     "id": "013",
     "title": "Simple Toast",
     "createdDate": "2025-01-06",
-    "modifiedDate": "2025-01-13",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "013.Simple Toast"
   },
@@ -107,7 +107,7 @@
     "id": "014",
     "title": "Simple System Theme",
     "createdDate": "2025-01-14",
-    "modifiedDate": "2025-02-19",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JavaScript",
     "path": "014.Simple System Theme"
   },
@@ -115,7 +115,7 @@
     "id": "015",
     "title": "Progress Indicator (CSS only)",
     "createdDate": "2025-01-15",
-    "modifiedDate": "2025-01-15",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "015.Progress Indicator (CSS only)"
   },
@@ -123,7 +123,7 @@
     "id": "016",
     "title": "Text Blurring",
     "createdDate": "2025-01-16",
-    "modifiedDate": "2025-01-16",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "016.Text Blurring"
   },
@@ -131,7 +131,7 @@
     "id": "017",
     "title": "System Badge (currentColor)",
     "createdDate": "2025-01-17",
-    "modifiedDate": "2025-01-22",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "017.System Badge (currentColor)"
   },
@@ -139,7 +139,7 @@
     "id": "018",
     "title": "Tooltip (abbr)",
     "createdDate": "2025-01-18",
-    "modifiedDate": "2025-01-19",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "018.Tooltip (abbr)"
   },
@@ -147,7 +147,7 @@
     "id": "019",
     "title": "Fading Cirle (CSS only)",
     "createdDate": "2025-01-19",
-    "modifiedDate": "2025-01-19",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "019.Fading Cirle (CSS only)"
   },
@@ -155,7 +155,7 @@
     "id": "020",
     "title": "Plan Section (2.5D)",
     "createdDate": "2025-01-20",
-    "modifiedDate": "2025-01-25",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "020.Plan Section (2.5D)"
   },
@@ -163,7 +163,7 @@
     "id": "021",
     "title": "Coupon in Corner",
     "createdDate": "2025-01-21",
-    "modifiedDate": "2025-01-25",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "021.Coupon in Corner"
   },
@@ -171,7 +171,7 @@
     "id": "022",
     "title": "Gradient Text",
     "createdDate": "2025-01-22",
-    "modifiedDate": "2025-03-27",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "022.Gradient Text"
   },
@@ -179,7 +179,7 @@
     "id": "023",
     "title": "Simple Privacy Dropdown",
     "createdDate": "2025-01-23",
-    "modifiedDate": "2025-01-23",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JavaScript",
     "path": "023.Simple Privacy Dropdown "
   },
@@ -187,7 +187,7 @@
     "id": "024",
     "title": "Simple Video Background",
     "createdDate": "2025-01-24",
-    "modifiedDate": "2025-01-24",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "024.Simple Video Background"
   },
@@ -195,7 +195,7 @@
     "id": "025",
     "title": "Image Gallery 2.5D",
     "createdDate": "2025-01-25",
-    "modifiedDate": "2025-02-05",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JavaScript",
     "path": "025.Image Gallery 2.5D"
   },
@@ -203,7 +203,7 @@
     "id": "026",
     "title": "Simple Tab",
     "createdDate": "2025-01-28",
-    "modifiedDate": "2025-02-06",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "026.Simple Tab"
   },
@@ -211,7 +211,7 @@
     "id": "027",
     "title": "Simple Pagination",
     "createdDate": "2025-01-28",
-    "modifiedDate": "2025-02-09",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JavaScript",
     "path": "027.Simple Pagination"
   },
@@ -219,7 +219,7 @@
     "id": "028",
     "title": "Expand Text Button",
     "createdDate": "2025-02-05",
-    "modifiedDate": "2025-02-09",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "028.Expand Text Button"
   },
@@ -227,7 +227,7 @@
     "id": "029",
     "title": "Simple Text Typing",
     "createdDate": "2025-01-31",
-    "modifiedDate": "2025-02-09",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JavaScript",
     "path": "029.Simple Text Typing"
   },
@@ -235,7 +235,7 @@
     "id": "030",
     "title": "Simple Follow Cursor",
     "createdDate": "2025-01-31",
-    "modifiedDate": "2025-02-10",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JavaScript",
     "path": "030.Simple Follow Cursor"
   },
@@ -243,7 +243,7 @@
     "id": "031",
     "title": "Simple Progress Steps",
     "createdDate": "2025-02-05",
-    "modifiedDate": "2025-02-18",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JavaScript",
     "path": "031.Simple Progress Steps"
   },
@@ -251,7 +251,7 @@
     "id": "032",
     "title": "Noise Filter Background",
     "createdDate": "2025-02-02",
-    "modifiedDate": "2025-02-11",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "032.Noise Filter Background"
   },
@@ -259,7 +259,7 @@
     "id": "033",
     "title": "Text Overlay Video",
     "createdDate": "2025-02-05",
-    "modifiedDate": "2025-03-12",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "033.Text Overlay Video"
   },
@@ -267,7 +267,7 @@
     "id": "034",
     "title": "Image Hover Zoom In",
     "createdDate": "2025-01-31",
-    "modifiedDate": "2025-02-13",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "034.Image Hover Zoom In"
   },
@@ -275,7 +275,7 @@
     "id": "035",
     "title": "Card Hover Blur Effect",
     "createdDate": "2025-02-01",
-    "modifiedDate": "2025-02-14",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "035.Card Hover Blur Effect"
   },
@@ -283,7 +283,7 @@
     "id": "036",
     "title": "Inline Images Text Flow",
     "createdDate": "2025-02-15",
-    "modifiedDate": "2025-02-15",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "036.Inline Images Text Flow"
   },
@@ -291,7 +291,7 @@
     "id": "037",
     "title": "Grid Image with Caption",
     "createdDate": "2025-02-16",
-    "modifiedDate": "2025-02-16",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "037.Grid Image with Caption"
   },
@@ -299,7 +299,7 @@
     "id": "038",
     "title": "Button with text Color and Color Mix",
     "createdDate": "2025-02-18",
-    "modifiedDate": "2025-02-18",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "038.Button with text Color and Color Mix"
   },
@@ -307,7 +307,7 @@
     "id": "039",
     "title": "Simple Camera Border with conic-gradient",
     "createdDate": "2025-02-18",
-    "modifiedDate": "2025-02-18",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "039.Simple Camera Border with conic-gradient"
   },
@@ -315,7 +315,7 @@
     "id": "040",
     "title": "Stack Avatars CSS only",
     "createdDate": "2025-02-20",
-    "modifiedDate": "2025-02-20",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "040.Stack Avatars CSS only"
   },
@@ -323,7 +323,7 @@
     "id": "041",
     "title": "Toggle Button IOS style",
     "createdDate": "2025-02-21",
-    "modifiedDate": "2025-02-21",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "041.Toggle Button IOS style"
   },
@@ -331,7 +331,7 @@
     "id": "042",
     "title": "Counting Up Number",
     "createdDate": "2025-02-23",
-    "modifiedDate": "2025-02-24",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JavaScript",
     "path": "042.Counting Up Number"
   },
@@ -339,7 +339,7 @@
     "id": "043",
     "title": "Simple Bounce Loader",
     "createdDate": "2025-02-24",
-    "modifiedDate": "2025-02-26",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "043.Simple Bounce Loader"
   },
@@ -347,7 +347,7 @@
     "id": "044",
     "title": "Simple Rating Star",
     "createdDate": "2025-02-26",
-    "modifiedDate": "2025-02-26",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "044.Simple Rating Star"
   },
@@ -355,7 +355,7 @@
     "id": "045",
     "title": "Diagonal List Card",
     "createdDate": "2025-02-27",
-    "modifiedDate": "2025-02-27",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "045.Diagonal List Card"
   },
@@ -363,7 +363,7 @@
     "id": "046",
     "title": "has() CSS to Image Caption",
     "createdDate": "2025-03-01",
-    "modifiedDate": "2025-03-19",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "046.has() CSS to Image Caption"
   },
@@ -371,7 +371,7 @@
     "id": "047",
     "title": "Simply Text Marquee CSS Only",
     "createdDate": "2025-03-03",
-    "modifiedDate": "2025-03-03",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "047.Simply Text Marquee CSS Only"
   },
@@ -379,7 +379,7 @@
     "id": "048",
     "title": "Highlighted Text Button Style",
     "createdDate": "2025-03-07",
-    "modifiedDate": "2025-03-07",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "048.Highlighted Text Button Style"
   },
@@ -387,7 +387,7 @@
     "id": "049",
     "title": "Framed Style",
     "createdDate": "2025-03-08",
-    "modifiedDate": "2025-03-08",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "049.Framed Style"
   },
@@ -395,7 +395,7 @@
     "id": "050",
     "title": "Component Selection Highlight",
     "createdDate": "2025-03-08",
-    "modifiedDate": "2025-03-08",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "050.Component Selection Highlight"
   },
@@ -403,7 +403,7 @@
     "id": "051",
     "title": "Simple Spinning Text with SVG",
     "createdDate": "2025-03-09",
-    "modifiedDate": "2025-03-09",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "051.Simple Spinning Text with SVG"
   },
@@ -411,7 +411,7 @@
     "id": "052",
     "title": "Transparent Inner Border with CSS Mask",
     "createdDate": "2025-03-12",
-    "modifiedDate": "2025-03-12",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "052.Transparent Inner Border with CSS Mask"
   },
@@ -419,7 +419,7 @@
     "id": "053",
     "title": "Simple Card With Clip-Path",
     "createdDate": "2025-03-13",
-    "modifiedDate": "2025-03-13",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "053.Simple Card With Clip-Path"
   },
@@ -427,7 +427,7 @@
     "id": "054",
     "title": "Simple 2.5D Button",
     "createdDate": "2025-03-15",
-    "modifiedDate": "2025-03-17",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "054.Simple 2.5D Button"
   },
@@ -435,7 +435,7 @@
     "id": "055",
     "title": "Simple Grid Background With Conic-Gradient",
     "createdDate": "2025-03-16",
-    "modifiedDate": "2025-03-16",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "055.Simple Grid Background With Conic-Gradient"
   },
@@ -443,7 +443,7 @@
     "id": "056",
     "title": "Simple del & ins HTML tag",
     "createdDate": "2025-03-17",
-    "modifiedDate": "2025-03-17",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "056.Simple del & ins HTML tag"
   },
@@ -451,7 +451,7 @@
     "id": "057",
     "title": "Animated Noise Background",
     "createdDate": "2025-03-18",
-    "modifiedDate": "2025-03-18",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, PNG",
     "path": "057.Animated Noise Background"
   },
@@ -459,7 +459,7 @@
     "id": "058",
     "title": "CSS has() for Highlight Category",
     "createdDate": "2025-03-20",
-    "modifiedDate": "2025-03-20",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML, JPG",
     "path": "058.CSS has() for Highlight Category"
   },
@@ -467,7 +467,7 @@
     "id": "059",
     "title": "Group Avatar",
     "createdDate": "2025-03-21",
-    "modifiedDate": "2025-03-21",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "059.Group Avatar"
   },
@@ -475,7 +475,7 @@
     "id": "060",
     "title": "Hover Button Animation By Transform",
     "createdDate": "2025-03-24",
-    "modifiedDate": "2025-03-27",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "060.Hover Button Animation By Transform "
   },
@@ -483,7 +483,7 @@
     "id": "061",
     "title": "Customize Checkbox",
     "createdDate": "2025-03-27",
-    "modifiedDate": "2025-03-27",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "061.Customize Checkbox"
   },
@@ -491,7 +491,7 @@
     "id": "062",
     "title": "Customize Radio",
     "createdDate": "2025-03-28",
-    "modifiedDate": "2025-04-01",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "062.Customize Radio"
   },
@@ -499,7 +499,7 @@
     "id": "063",
     "title": "Shining Text Effect",
     "createdDate": "2025-04-01",
-    "modifiedDate": "2025-04-02",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "063.Shining Text Effect"
   },
@@ -507,7 +507,7 @@
     "id": "064",
     "title": "Simple Waving Loader",
     "createdDate": "2025-04-02",
-    "modifiedDate": "2025-04-02",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "064.Simple Waving Loader"
   },
@@ -515,7 +515,7 @@
     "id": "065",
     "title": "Simple Ellipse Text",
     "createdDate": "2025-04-04",
-    "modifiedDate": "2025-04-06",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "065.Simple Ellipse Text"
   },
@@ -523,7 +523,7 @@
     "id": "066",
     "title": "Simple Card With Transition",
     "createdDate": "2025-04-06",
-    "modifiedDate": "2025-04-08",
+    "modifiedDate": "2025-04-09",
     "tech": "CSS, HTML",
     "path": "066.Simple Card With Transition"
   },
@@ -539,8 +539,16 @@
     "id": "068",
     "title": "Directionally Aware Button",
     "createdDate": "2025-04-09",
-    "modifiedDate": "2025-04-09",
-    "tech": "CSS, HTML",
+    "modifiedDate": "2025-04-10",
+    "tech": "CSS, HTML, JavaScript",
     "path": "068.Directionally Aware Button"
+  },
+  {
+    "id": "069",
+    "title": "Simple Notify Button",
+    "createdDate": "2025-04-10",
+    "modifiedDate": "2025-04-10",
+    "tech": "CSS, HTML",
+    "path": "069.Simple Notify Button"
   }
 ]
