--- a/projects.json
+++ b/projects.json
@@ -561,10 +561,10 @@
   },
   {
     "id": "071",
-    "title": "Simple Faqs Section",
+    "title": "Simple FAQs Section",
     "createdDate": "2025-04-13",
     "modifiedDate": "2025-04-13",
     "tech": "CSS, HTML",
-    "path": "071.Simple Faqs Section"
+    "path": "071.Simple FAQs Section"
   }
 ]
