--- a/projects.json
+++ b/projects.json
@@ -617,10 +617,10 @@
   },
   {
     "id": "078",
-    "title": "Simple Input With Prefix",
+    "title": "Simple Input With Prefix And Postfix",
     "createdDate": "2025-04-21",
     "modifiedDate": "2025-04-21",
     "tech": "CSS, HTML",
-    "path": "078.Simple Input With Prefix"
+    "path": "078.Simple Input With Prefix And Postfix"
   }
 ]
