feat(day #82): add Trail Dotted component with HTML, CSS, and screenshot

--- a/projects.json
+++ b/projects.json
@@ -641,10 +641,18 @@
   },
   {
     "id": "081",
-    "title": "Tabs Header  With Badge",
+    "title": "Tabs Header With Badge",
     "createdDate": "2025-04-27",
-    "modifiedDate": "2025-04-27",
+    "modifiedDate": "2025-04-30",
     "tech": "CSS, HTML",
-    "path": "081.Tabs Header  With Badge"
+    "path": "081.Tabs Header With Badge"
+  },
+  {
+    "id": "082",
+    "title": "Test New",
+    "createdDate": "2025-05-01",
+    "modifiedDate": "2025-05-01",
+    "tech": "CSS, HTML",
+    "path": "082.Test New"
   }
 ]
