--- a/projects.json
+++ b/projects.json
@@ -649,10 +649,10 @@
   },
   {
     "id": "082",
-    "title": "Test New",
+    "title": "Trail Dotted",
     "createdDate": "2025-05-01",
-    "modifiedDate": "2025-05-01",
-    "tech": "CSS, HTML",
-    "path": "082.Test New"
+    "modifiedDate": "2025-05-02",
+    "tech": "CSS, HTML, Markdown, PNG",
+    "path": "082.Trail Dotted"
   }
 ]
