--- a/projects.json
+++ b/projects.json
@@ -659,16 +659,24 @@
     "id": "083",
     "title": "Sticky Sidebar Section",
     "createdDate": "2025-05-04",
-    "modifiedDate": "2025-05-06",
-    "tech": "CSS, HTML, Markdown, PNG",
+    "modifiedDate": "2025-05-07",
+    "tech": "CSS, HTML, MP4, Markdown, PNG",
     "path": "083.Sticky Sidebar Section"
   },
   {
     "id": "084",
-    "title": "Infinite Scroll Stock Statistics",
+    "title": "Carousel Slider (Infinite Mode) Stock Statistics",
     "createdDate": "2025-05-06",
-    "modifiedDate": "2025-05-06",
+    "modifiedDate": "2025-05-07",
+    "tech": "CSS, HTML, MP4, Markdown",
+    "path": "084.Carousel Slider (Infinite Mode) Stock Statistics"
+  },
+  {
+    "id": "085",
+    "title": "Nested Dropdown Menu",
+    "createdDate": "2025-05-07",
+    "modifiedDate": "2025-05-07",
     "tech": "CSS, HTML",
-    "path": "084.Infinite Scroll Stock Statistics"
+    "path": "085.Nested Dropdown Menu"
   }
 ]
