--- a/projects.json
+++ b/projects.json
@@ -675,8 +675,16 @@
     "id": "085",
     "title": "Nested Dropdown Menu",
     "createdDate": "2025-05-07",
-    "modifiedDate": "2025-05-07",
-    "tech": "CSS, HTML",
+    "modifiedDate": "2025-05-09",
+    "tech": "CSS, HTML, MP4, Markdown",
     "path": "085.Nested Dropdown Menu"
+  },
+  {
+    "id": "086",
+    "title": "Simple Tooltips",
+    "createdDate": "2025-05-11",
+    "modifiedDate": "2025-05-11",
+    "tech": "CSS, HTML",
+    "path": "086.Simple Tooltips"
   }
 ]
