--- a/projects.json
+++ b/projects.json
@@ -683,8 +683,16 @@
     "id": "086",
     "title": "Simple Tooltips",
     "createdDate": "2025-05-11",
-    "modifiedDate": "2025-05-11",
-    "tech": "CSS, HTML",
+    "modifiedDate": "2025-05-13",
+    "tech": "CSS, HTML, MP4, Markdown",
     "path": "086.Simple Tooltips"
+  },
+  {
+    "id": "087",
+    "title": "Automatic Numbering With Css Counters",
+    "createdDate": "2025-05-14",
+    "modifiedDate": "2025-05-14",
+    "tech": "CSS, HTML",
+    "path": "087.Automatic Numbering With Css Counters"
   }
 ]
