init(#88): code base day 88

--- a/projects.json
+++ b/projects.json
@@ -683,16 +683,24 @@
     "id": "086",
     "title": "Simple Tooltips",
     "createdDate": "2025-05-11",
-    "modifiedDate": "2025-05-15",
+    "modifiedDate": "2025-05-17",
     "tech": "CSS, HTML, MP4, Markdown",
     "path": "086.Simple Tooltips"
   },
   {
     "id": "087",
     "title": "Numbering With CSS Counters",
-    "createdDate": "2025-05-14",
-    "modifiedDate": "2025-05-14",
+    "createdDate": "2025-05-17",
+    "modifiedDate": "2025-05-17",
     "tech": "CSS, HTML",
     "path": "087.Numbering With CSS Counters"
+  },
+  {
+    "id": "088",
+    "title": "Nested Toggle Button",
+    "createdDate": "2025-05-19",
+    "modifiedDate": "2025-05-19",
+    "tech": "CSS, HTML",
+    "path": "088.Nested Toggle Button"
   }
 ]
