feat(#90): code base for day #99

--- a/projects.json
+++ b/projects.json
@@ -699,7 +699,7 @@
     "id": "088",
     "title": "Nested Toggle Button",
     "createdDate": "2025-05-29",
-    "modifiedDate": "2025-05-29",
+    "modifiedDate": "2025-05-31",
     "tech": "CSS, GIF, HTML, JavaScript, MP4, Markdown",
     "path": "088.Nested Toggle Button"
   },
@@ -707,8 +707,16 @@
     "id": "089",
     "title": "Simple Bento Grid",
     "createdDate": "2025-05-30",
-    "modifiedDate": "2025-05-30",
-    "tech": "CSS, HTML",
+    "modifiedDate": "2025-06-01",
+    "tech": "CSS, GIF, HTML, MP4, Markdown",
     "path": "089.Simple Bento Grid"
+  },
+  {
+    "id": "090",
+    "title": "Image On Error Placeholder  2",
+    "createdDate": "2025-06-02",
+    "modifiedDate": "2025-06-02",
+    "tech": "CSS, HTML",
+    "path": "090.Image On Error Placeholder  2"
   }
 ]
