docs(#91): codebase for day 91

--- a/projects.json
+++ b/projects.json
@@ -715,8 +715,16 @@
     "id": "090",
     "title": "Image On Error Placeholder CSS Only",
     "createdDate": "2025-06-02",
-    "modifiedDate": "2025-06-02",
+    "modifiedDate": "2025-06-03",
     "tech": "CSS, HTML, Markdown, PNG, WEBP",
     "path": "090.Image On Error Placeholder CSS Only"
+  },
+  {
+    "id": "091",
+    "title": "Simple Before After Slider",
+    "createdDate": "2025-06-04",
+    "modifiedDate": "2025-06-04",
+    "tech": "CSS, HTML, JavaScript",
+    "path": "091.Simple Before After Slider"
   }
 ]
