--- a/projects.json
+++ b/projects.json
@@ -721,10 +721,10 @@
   },
   {
     "id": "091",
-    "title": "Simple Before After Slider",
+    "title": "Image Comparison Slider",
     "createdDate": "2025-06-04",
     "modifiedDate": "2025-06-04",
     "tech": "CSS, HTML, JavaScript",
-    "path": "091.Simple Before After Slider"
+    "path": "091.Image Comparison Slider"
   }
 ]
