--- a/projects.json
+++ b/projects.json
@@ -745,10 +745,10 @@
   },
   {
     "id": "094",
-    "title": "Simple Inline Svgs",
+    "title": "SVG Background Image",
     "createdDate": "2025-06-18",
-    "modifiedDate": "2025-06-18",
-    "tech": "CSS, HTML",
-    "path": "094.Simple Inline Svgs"
+    "modifiedDate": "2025-06-19",
+    "tech": "CSS, HTML, Markdown",
+    "path": "094.SVG Background Image"
   }
 ]
